test/conformance/chainsaw/generate-mutating-admission-policy/with-multiple-exceptions/mutatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: mpol-add-label-jsonpatch
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: MutatingPolicy
    name: add-label-jsonpatch
spec:
  failurePolicy: Fail
  (matchConditions[?name == 'check-name']):
  - expression: '!(object.metadata.name == ''skipped-deployment'')'
    name: check-name
  (matchConditions[?name == 'check-namespace']):
  - expression: '!(object.metadata.namespace == ''testing-ns'')'
    name: check-namespace
  (matchConditions[?name == 'is-dev-namespace']):
  - expression: request.namespace == 'dev'
    name: is-dev-namespace
  matchConstraints:
    matchPolicy: Equivalent
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - deployments
  mutations:
  - jsonPatch:
      expression: |
        has(object.metadata.labels) ?
        [
          JSONPatch{
            op: "add",
            path: "/metadata/labels/managed",
            value: "true"
          }
        ] :
        [
          JSONPatch{
            op: "add",
            path: "/metadata/labels",
            value: {"managed": "true"}
          }
        ]
    patchType: JSONPatch
  reinvocationPolicy: Never
